examples/test/testpolicy2613.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy2613
  namespace: namespace387
spec:
  podSelector:
    matchLabels:
      key7: value45
      key49: value35
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key24: value39
          key16: value27
          key10: value20
      podSelector:
        matchLabels:
          key29: value33
          key0: value1
